synchronize the view of a table cell if we dont realign the cell content vertically,  bug 237734, r/sr=roc a=chofmann